# corse_5

./: README  config.py  database.ini  db_manager.py  hh_api.py  id_companies.json  main.py  pyproject.toml  utils.py
src/: config.py  db_manager.py
